Add global provider configuration and use it